# loosely-coupled-monolith-rust

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
billing_contracts/: Cargo.toml
billing_contracts/src/: lib.rs  order_billed.rs
common/: Cargo.toml
common/src/: event_registry.rs  lib.rs
sales/: Cargo.toml
sales/src/: endpoints.rs  lib.rs  order.rs  sales_db_context.rs
sales_contracts/: Cargo.toml
sales_contracts/src/: lib.rs  order_placed.rs
sales_test/: Cargo.toml
sales_test/src/: lib.rs  test_create_order.rs
sales_test/src/tests/: mod.rs  test_create_order.rs
shipping/: Cargo.toml
shipping/src/: configure_services.rs  create_shipping_label.rs  endpoints.rs  lib.rs  message_handler.rs  service.rs  shipping_db_context.rs  shipping_label.rs
shipping_contracts/: Cargo.toml
shipping_contracts/src/: create_shipping_label.rs  lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
