[package]
name = "shipping"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
common = { path = "../common" }
sales_contracts = { path = "../sales_contracts" }
shipping_contracts = { path = "../shipping_contracts" }
billing_contracts = { path = "../billing_contracts" }
